--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,9 @@ subprojects {
     }
 
     dependencies {
-        testImplementation 'org.junit.jupiter:junit-jupiter-api:${junitVersion}'
-        testImplementation 'org.junit.jupiter:junit-jupiter-params:${junitVersion}'
-        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:${junitVersion}'
+        testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
+        testImplementation "org.junit.jupiter:junit-jupiter-params:${junitVersion}"
+        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
     }
 
     test {
